# DBMS-Practice-Project

./: .gitignore  README.md  pyproject.toml  replit.nix  replit_zip_error_log.txt
.upm/: store.json
src/todolist/: db.py
src/todolist/repl/: app.py  console.py  helper.py  shell.py
src/todolist/tui/: app.py  style.css
src/todolist/tui/widgets/: select.py
